2019-09-21 (v4.1)

- Make organization of ultimates into per-character rather than
per-account.

- Update API for Dragonhold.

2019-08-01 (v4.0)

- Bump API version for Scalebreaker.

- Disallow moving window while selecting an ultimate.

- Add experimental healing and damage tracking.

- Remove ability to communicate with pre-Elsewyr versions.

- Fix /pocn countdown.

- Reorganize settings menu into subcategories.

- Fix issue which caused screen to be updated too frequently.

- Fix breakage with countdown and alert.

- Fix bleed-over from previous groups showing up when a new group is joined.

2019-07-26 (v4.0b11)

- Update for Scalebreaker.

- Disallow moving window while selecting an ultimate.

- Add more events to track for healing and damage so that stats menu
is more accurate.

2019-07-22 (v4.0b10)

- Remove ability to communicate with pre-Elsewyr versions.

2019-07-11 (v4.0b9)

- Actually allow stats window to turn on and off when it is supposed to.

2019-07-09 (v4.0b8)

- Fix text alignment and truncation in healing and ultimate windows.

2019-07-06 (v4.0b7)

- Fix /pocn countdown.

2019-06-30 (v4.0b6)

- Try to get damange/heal sharing working.

- Try harder to not send new ultimates to old POC.

- Reorganize settings menu into subcategories.

- Fix issue which caused screen to be updated too frequently.

- Fix breakage with countdown and alert.

- Fix bleed-over from previous groups showing up when a new group is joined.

2019-04-20 (v3.42)

- Bump API version for Elsewyr.

- Delete old group members more reliably to avoid ghosts of previous group
showing up inappropriately.

- Add support for all known ultimates.

- Change ping location to 'Summerset' to avoid interference with pervious
versions of POC.

- Stop using LibStub for libraries.

- This version contains compability changes to allow it to interoperate with
previous versions.  It will be disappearing soon since it makes POC slightly
slower.

2019-04-20 (v3.41)
