@@ -1,3 +1,9 @@
+2019-10-21 (v4.2)
+
+- Fix LibSlashCommand error when leaving group.
+
+- Use LibDebugLogger for some messages.
+
 2019-09-21 (v4.1)
 
 - Make organization of ultimates into per-character rather than
